Fix reset password css align

--- a/css/login.css
+++ b/css/login.css
@@ -65,7 +65,6 @@ font-family: Mona Shark;
     font-size: 20px;
     font-family: Rubik;
     cursor: default;
-    margin-right: 10%;
 }
 
 .modal-footer-buttons {
@@ -141,11 +140,20 @@ font-family: Mona Shark;
 }
 
 .forgot-email-label {
-    position: absolute;
-    right: 15px;
     color: #003569;
     font-size: 14px;
     font-family: Rubik;
+}
+
+.forgot-email-text {
+    cursor: default;
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    position: absolute;
+    direction: ltr;
+    left: 0px;
 }
 
 .register-btn {
